[tool.poetry]
name = "poe-river-analysis"
version = "0.1.0"
description = ""
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.5.3"
jupyterlab = "^2.1.5"
pandas = "^1.0.5"
psycopg2 = "^2.8.5"
matplotlib = "^3.2.2"
seaborn = "^0.10.1"
missingno = "^0.4.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
